3d, 3 months of asst updates

--- a/art.html
+++ b/art.html
@@ -23,6 +23,8 @@
       I draw cartoonily and also a bunch of 3d stuff. Check out my <a
         href="https://www.furaffinity.net/user/2718281828/">FurAffinity</a> for a more comprehensive gallery.
       <br>
+      <!-- TODO age popup js - popup that redirects to the page instead of direct link-->
+      <!-- <a href="artnsfw.html">Looking for nsfw art?</a> -->
       <center>
         <img src="./pics/construction.gif">
         <img src="./pics/ICON-CONSTRUCTION.gif">
