--- a/blender-tips.html
+++ b/blender-tips.html
@@ -45,6 +45,10 @@
         &emsp;rotation 90, 0, -90 (+x axis) to aim camera at center<br>
         &emsp;save render as .exr or .hdr<br>
       </p>
+      For eyelashes - copy an eye loop, move it apart, extend it and color black, also shape like eyelashes<br>
+      <br>
+      To sketch on an equirectangular panomrama, make an inside out sphere, put the camera in the center, draw on a greasepencil set to use the sphere
+       
       <hr>
       <center>
         <h3>Files</h3>
