--- a/cool-sites.html
+++ b/cool-sites.html
@@ -71,8 +71,13 @@
                     <a href="https://jspaint.app/">jspaint</a> - ms paint clone in your browser. Supports multiplayer & more<br>
                     <a href="https://bigzfabric.com/index.php/fabrics/faux-faux-fur-fabric-long-pile.html">big z fabric</a> - faux fur source for fursuits<br>
                     <a href="https://www.cameronsworld.net/">cameron's world</a> - geocities gifs art page<br>
+                    <a href="https://www.phrontistery.info/">the phrontistery</a> - rare english words<br>
+                    <a href="https://reactive.fugi.tech/">Reactive</a> - animate avatars when people talk in discord. Useful for streams to show who's talking<br>
+                    <a href="https://discmaster.textfiles.com">discmaster</a> - partial mirror of archive.org with a different search/browse interface<br>
+                    <a href="http://redump.org/">REDUMP</a> - if a disc exists it probably has a page here. Have to find the contents on your own though<br>
+                    <a href="http://obs-web.niek.tv/">OBS-web</a> - control your OBS through a website. Useful for switching scenes/etc on your phone<br>
 
-
+                    
                     <hr>
                     <a href="#software">
                         <h2 id="software">☃️Cool Software</h2>
@@ -80,8 +85,7 @@
                     <a href="https://godotengine.org/">godot</a> - free 2d/3d game engine<br>
                     <a href="https://drawpile.net/">drawpile</a> - multiplayer drawing<br>
                     <a href="https://github.com/yt-dlp/yt-dlp">yt-dlp</a> - fork of youtube-dl. Download videos off the
-                    internet
-                    easily<br>
+                    internet easily<br>
                     <a href="https://kubuntu.org/">kubuntu</a> - using ubuntu is pretty easy<br>
                     <a href="https://www.blender.org/">blender</a> - 3d modeling + much more!<br>
                     <a href="https://krita.org/">krita</a> - the drawing software I use<br>
@@ -89,7 +93,9 @@
                     <a href="https://gif.ski/">gifski</a> - make really nice looking gifs<br>
                     <a href="https://www.microsoft.com/en-us/software-download/windows10ISO">win10 iso</a> - windows 10 from microsoft themselves<br>
                     <a href="https://olmewe.itch.io/veadotube-mini">vaedotube mini</a> - animates an image based on your voice. Fun for streams<br>
-                    
+                    <a href="https://gitlab.com/azelpg/azpainter">azpainter</a> - an open source paint tool sai clone that you have to compile yourself<br>
+                    <a href="https://bluemaxima.org/flashpoint/">flashpoint</a> - flash (& more) preservation project.<br>
+
 
                     <hr>
                 </div>
@@ -97,6 +103,7 @@
                     <a href="#streamers">
                         <h2 id="streamers">🌨️Cool Streamers</h2>
                     </a>
+                    <a href="https://nobody.live/">nobody.live</a> - watch a random twitch stream that has no viewers<br>
                     <a href="https://www.twitch.tv/jerma985">jerma985</a> - funny variety streamer. Unique sense of
                     humor.<br>
                     <a href="https://www.twitch.tv/thechief1114">thechief1114</a> - gta roleplayer. Light hearted, very
@@ -136,7 +143,8 @@
                     <a href="https://www.youtube.com/c/HirokunTV/videos">hirokuntv</a> - japanese ufo catcher
                     videos.<br>
                     <a href="https://www.youtube.com/c/TheGameShowChannel/videos">the gameshow channel</a> - tons of old gameshow episodes<br>
-
+                    <a href="https://www.youtube.com/@ABC7/streams">ABC7</a> - livestreams of chasing car chases in a helicopter<br>
+                    <a href="https://www.shoutfactorytv.com">Shout! Factory tv</a> - live streams of old tv shows, US, japanese, and more.<br>
 
                     <hr>
                 </div>
