--- a/food-reviews.html
+++ b/food-reviews.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>k0bold's Furry Knowledge</title>
+    <title>k0bold's Food Reviews</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" type="image/png" href="favicon.gif" />
     <link rel="stylesheet" href="ninety.css" />
@@ -14,25 +14,27 @@
 
 <body style="background-image: url('./pics/bg/bg15.gif');">
     <div class="myheader">
-        Some of my furry knowledge I want to share
+        Reviews of food products
     </div>
     <div class="mainrow">
         <iframe class="iframeinvis2" scrolling="no" onload="resizeIframe(this)" src="links.html"></iframe>
         <div class="contentcolumn">
-            <h3>Fetishes</h3>
-            ctf = cock transformation - merging into someone as their penis<br>
-            ftp = ctf for pussies, stands for something in german<br>
-
-            <h3>Websites</h3>
-            SoFurry used to be called YiffStar<br>
-            Bad Dragon, E621, f-list, & more are all owned by the same company<br>
-            <a href="https://addventure.bearchive.com/">bearchive addventure</a> - mostly not furry - cyoa centered around BE (but with most everything else too!) going on since '98<br>
-            
-
-            <h3>Funnies</h3>
-            Bigger balls = more ejaculate<br>
-            
-
+            <h2>Little Debbie</h2>
+            <ol>
+                <li>Nutty Buddys</li>
+                <li>Peanut Butter Crunch Bars</li>
+                <li>Donut Sticks</li>
+                <li>Pecan Spinwheels</li>
+                <li>Cherry Pies</li>
+                <li>Honey Buns</li>
+                <li>Turtle Brownies</li>
+                <li>Cosmic Brownies</li>
+                <li>Oatmeal Cream Pies</li>
+                <li>Swiss Rolls</li>
+                <li>Chocolate Cupcakes</li>
+                <li>Star Crunch</li>
+                <li>Gingerbread Cookies</li>
+            </ol>
         </div>
     </div>
 
