--- a/game-collection.html
+++ b/game-collection.html
@@ -19,6 +19,7 @@
     <div class="mainrow">
         <iframe class="iframeinvis2" scrolling="no" onload="resizeIframe(this)" src="links.html"></iframe>
         <div class="contentcolumn">
+            I generally resell a game when I finish it, unless its multiplayer or I think I might play it again (rare).<br>
             <h2>pc</h2>
             controllers: steam, buffalo snes, xbone, ps5<br>
             accesories: avermedia gc311 capture card, ps2 karoke mic, blue yeti, <br>
