--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" type="image/png" href="favicon.gif" />
   <link rel="stylesheet" href="ninety.css" />
   <script src="sitewide.js"></script>
-  <link rel="stylesheet" href="https://furryring.neocities.org/onionring.css">
+  <!-- <link rel="stylesheet" href="https://furryring.neocities.org/onionring.css"> -->
 </head>
 
 <body style="background-image: url('./pics/bg/bg18.gif');">
@@ -30,8 +30,9 @@
       <hr>
       <h2>News🦖</h2>
       <div style="width: 480px; height: 70px; overflow-y: scroll; background-color: rgba(255, 255, 255, 0.089);">
-        1/23/23 - Webrings, more links, github pages host<br>
-        1/19/23 - More art, sidebar re-org, comm info updated<br>
+        4/18/23 - 3d page, <a href="recipes.html#pb">new recipe</a>, <a href="game-collection.html">game collection page</a>, gamer info, and updates all around<br>
+        1/23/23 - More links, github pages host<br>
+        1/19/23 - More art, sidebar re-org, characters, comm info updated<br>
         1/16/23 - Added about me page, cool links update, now on sdf too!<br>
         1/12/23 - Videos page<br>
         1/9/23 - Now on Neocities too!<br>
@@ -47,7 +48,7 @@
       <hr>
 
       <h2>Current Projects🐊</h2>
-      Marble Race Game --> <a href="videos.html"><img src="./pics/cube.gif" height="16">Videos</a>
+      Party FPS game 🎉 -> <a href="games.html">here</a>
       <hr>
 
       <h2>Links🐉</h2>
@@ -114,7 +115,7 @@
       </div>
       <hr>
       <center>
-        <div id='furryring'>
+        <!-- <div id='furryring'>
           <script type="text/javascript" src="https://furryring.neocities.org/onionring-variables.js"></script>
           <script type="text/javascript" src="https://furryring.neocities.org/onionring-widget.js"></script>
         </div>
@@ -125,7 +126,7 @@
         <div class="yw-widget-full" data-yw-url="https://www.k0bold.com/"></div>
         <script src="https://yesterweb.org/js/widget.js"></script>
 
-        <hr>
+        <hr> -->
         <a href="."><img src="./pics/badge.gif"></a>
       </center>
     </div>
