--- a/links.html
+++ b/links.html
@@ -1,3 +1,5 @@
+<!-- <!DOCTYPE html> -->
+
 <head>
     <link rel="stylesheet" href="ninety.css" />
     <base target="_parent">
@@ -14,6 +16,7 @@
         <!-- <li><a href="cryptids.html">🐲Cryptids</a></li> -->
         <li><a href="spookies.html"><img src="./pics/scary-icon.png" height="16">Scary Pics</a></li>
         <li><a href="heads.html"><img src="./pics/heads/typoYap2.gif" height="16">Headz</a></li>
+        <li><a href="3d.html">🌐3D</a></li>
         <li><a href="backgrounds.html">🖼️Backgrounds</a></li>
         <li><a href="videos.html">📺Videos</a></li>
         <li><a href="blender-tips.html"><img src="./favicons/blender.ico">Blender Tips</a></li>
@@ -29,10 +32,16 @@
         <summary>misc</summary>
         <li><a href="cool-sites.html"><!-- 🖥️ -->❄️Cool Links</a></li>
         <li><a href="game-reviews.html">🎮Reviews</a></li>
+        <!-- <li><a href="food-reviews.html">Food Reviews</a></li> -->
         <li><a href="recipes.html">🍲Recipes</a></li>
         <li><a href="characters.html">🐊Characters</a> </li>
         <li><a href="about-me.html">🐲About Me</a></li>
-        <!-- <li><a href="furry-knowledge.html">🔞🦊 Furry Knowledge</a></li> -->
         <!-- <li><a href="contact.html">Contact</a><br></li> -->
     </details>
+    <!-- <details open>
+        <summary>18+</summary>
+        <li><a href="adult-art.html">Art</a></li>
+        <li><a href="adult-games.html">Games</a></li>
+        <li><a href="furry-knowledge.html">🦊 Furry Knowledge</a></li>
+    </details> -->
 </ul>
