--- a/recipes.html
+++ b/recipes.html
@@ -19,6 +19,70 @@
   <div class="mainrow">
     <iframe class="iframeinvis2" scrolling="no" onload="resizeIframe(this)" src="links.html"></iframe>
     <div class="contentcolumn">
+      <!-- TODO crumb topping - sugar + flour + butter, put on top of baked goods before baking.
+        coconut macaroons -->
+      <center>
+        <a href="#chocopbtopping">
+          <h2 id="chocopbtopping">Chocolate Peanut Butter Topping (Frosting?)</h2>
+        </a>
+      </center>
+      <div class="twocolumnrow">
+        <div class="twocolumncolumn">
+          Part of a less good recipe I found, this is really simple but pretty good. Put on brownies/cookies/cake while warm.<br>
+          <br>
+          Ingredients:<br>
+          1 cup chocolate chips<br>
+          1/2 cup peanut butter<br>
+          <br>
+          Directions:<br>
+          Heat on low while stirring constantly until mixed.<br>
+        </div>
+        <div class="twocolumncolumn">
+          <center>
+            <img src="./pics/pbcookies.gif">
+          </center>
+        </div>
+      </div>
+      <hr>
+
+    <div class="contentcolumn">
+      <center>
+        <a href="#pb">
+          <h2 id="pb">Old Style Peanut Butter Cookies</h2>
+        </a>
+      </center>
+      <div class="twocolumnrow">
+        <div class="twocolumncolumn">
+          <center>
+            <img src="./pics/pbcookiesrecipe.gif"><br>
+          </center>
+          Found this recipe in my mom's collection. Makes a lot more sugar cookie tasting cookie than my other recipe. Still chewy but a bit more crisp.<br>
+          I use butter instead of shortening.<br>
+          <br>
+          Ingredients:<br>
+          1 cup sugar<br>
+          1 cup brown sugar<br>
+          3/4 cup butter<br>
+          3/4 cup peanut butter<br>
+          2 eggs<br>
+          2 tsp vanilla<br>
+          3 cup flour<br>
+          1 tsp baking soda<br>
+          3/4 tsp salt<br>
+          <br>
+          Steps:<br>
+          Mix wet ingredients together first, then add dry ingredients all at once.<br>
+          Smush with a fork to get the classic peanut butter cookie look.<br>
+          Bake at 350 degrees for 9 - 11 minutes.<br>
+        </div>
+        <div class="twocolumncolumn">
+          <center>
+            <img src="./pics/pbcookies.gif">
+          </center>
+        </div>
+      </div>
+      <hr>
+
       <center>
         <a href="#ginger">
           <h2 id="ginger">🍪Ginger Cookies</h2>
@@ -250,12 +314,12 @@
       <h3>To Post List</h3>
       Oatmeal cookies? Pudding chocolate chip cookies, no bake cookies,
       <h3>To Make List</h3>
-      shortbread,
+      shortbread, buckeyes (lazy pb cups),
       mexican wedding cookies/cake, coconut macaroons, lemon cookies?,
       molasses cookies, sugar cookies (lazy by making dough into rolls, fridge for a few hours, then slicing into 1/8th
       inh slices),
       more classic pb cookies from childhood with fork marks - less pb and crunchier,
-      sour cream cookies?,
+      sour cream cookies?, chocolate chip with reeses pb mix on top/inside,
 
     </div>
   </div>
