--- a/games.html
+++ b/games.html
@@ -12,7 +12,7 @@
   <script src="sitewide.js"></script>
 </head>
 
-<body style="background-image: url('./pics/bg/bg16d.gif');">
+<body style="background-image: url('./pics/bg/bg12.gif');">
   <div class="myheader">
     Games I made or am making or was part of! Check out my <a href="https://k0bold.itch.io">Itch.io</a>
   </div>
@@ -20,12 +20,16 @@
     <iframe class="iframeinvis2" scrolling="no" onload="resizeIframe(this)" src="links.html"></iframe>
     <div class="contentcolumn">
       <h3>Upcoming</h3>
-      Marble Race - see a preview in <a href="videos.html">videos</a><br>
+      Party FPS Game<br>
+      <img src="./pics/hallmonitorpreview.gif">
       <hr>
       <h3>Released</h3>
       <iframe src="https://itch.io/embed/1803935?border_width=3&amp;dark=true" width="556" height="171"
         frameborder="0"><a href="https://k0bold.itch.io/hangin-out-at-tf-mall">Hangin' Out At The TF Mall by
           k0bold</a></iframe><br>
+          <hr>
+      <h3>Assorted</h3>
+      Marble Race - see a preview in <a href="videos.html">videos</a><br>
 
     </div>
   </div>
