added panorama page

--- a/cool-sites.html
+++ b/cool-sites.html
@@ -76,7 +76,8 @@
                     <a href="https://discmaster.textfiles.com">discmaster</a> - partial mirror of archive.org with a different search/browse interface<br>
                     <a href="http://redump.org/">REDUMP</a> - if a disc exists it probably has a page here. Have to find the contents on your own though<br>
                     <a href="http://obs-web.niek.tv/">OBS-web</a> - control your OBS through a website. Useful for switching scenes/etc on your phone<br>
-
+                    <a href="http://www.hrwiki.org">homestar runner wiki</a> - a classic flash cartoon with a great wiki<br>
+                    
                     
                     <hr>
                     <a href="#software">
