--- a/godot-tips.html
+++ b/godot-tips.html
@@ -184,6 +184,8 @@ func set_respawn_point(point):
       <br>
       if mouse clicks aren't getting through to 3d, check for ui nodes eating mouse input. Check their Mouse -> Filter and try changing it to Pass.<br>
       <br>
+      When saving resources you can set a custom name that you access with resource.resource_name - useful for comparing materials.<br>
+      <br>
       
       </p>
     </div>
