--- a/links.html
+++ b/links.html
@@ -19,6 +19,7 @@
         <li><a href="3d.html">🌐3D</a></li>
         <li><a href="backgrounds.html">🖼️Backgrounds</a></li>
         <li><a href="videos.html">📺Videos</a></li>
+        <li><a href="panoramas.html">📷Panoramas</a></li>
         <li><a href="blender-tips.html"><img src="./favicons/blender.ico">Blender Tips</a></li>
     </details>
     <details open>
